Bump min. required java version to 17. Change the 'because' section to include an explicit project and configuration reference. Add refs count.